--- a/client/assets/styles/_vars.styl
+++ b/client/assets/styles/_vars.styl
@@ -4,7 +4,7 @@
 $c-teal = #5DD9C1
 $c-blue = #2C97DE
 $c-copy = #323E4E
-$c-gray = #9FACB9
+$c-gray = darken(#9FACB9, 10%)
 $c-light-gray = #EEF1F5
 $c-border = #DCE6E9
 $c-icons = #A9B7C8
